--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 #cv2==3.3.0
-pip
-opencv-python
-keras==1.2.2
+#pip
+#opencv-python
+#keras==1.2.2
 #matplotlib==2.1.0
 #tensorflow==1.3.0
 #numpy==1.13.3
