--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 #cv2==3.3.0
 pip
 opencv-python
-#tensorflow==1.15.0
-keras==2.2.0
-tensorflow
+tensorflow==1.15.0
+keras==1.0.8
+#tensorflow
 #keras==2.1.4
 #keras==2.6
 wget
